builds/4/log
Started by user unknown or anonymous
Running as SYSTEM
Building in workspace /var/lib/jenkins/workspace/python_bash_job
[python_bash_job] $ python /tmp/jenkins5246493717552731217.py
  File "/tmp/jenkins5246493717552731217.py", line 5
    os.system(`sudo apt install default-jre`)
                      ^
SyntaxError: invalid syntax
Build step 'Execute Python script' marked build as failure
Finished: FAILURE
